// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image custom borderRadius 1`] = `
Array [
  <div>
    border-radius - 35px
  </div>,
  .c0 {
  box-sizing: border-box;
  border-radius: 35px;
  object-fit: cover;
}

<img
    alt=""
    className="c0"
    height={120}
    size={120}
    src="https://picsum.photos/512?image=66"
    width={120}
  />,
]
`;

exports[`Storyshots Image custom css 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c1 {
  opacity: 0.5;
  border: dotted 5px red;
}

<img
  alt=""
  className="c0 c1"
  height={300}
  size={300}
  src="https://picsum.photos/512?image=66"
  width={300}
/>
`;

exports[`Storyshots Image custom dimensions 1`] = `
Array [
  <div>
    width - 800px / height - 400px
  </div>,
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

<img
    alt=""
    className="c0"
    height={400}
    size={120}
    src="https://picsum.photos/512?image=66"
    width={800}
  />,
]
`;

exports[`Storyshots Image image fit values 1`] = `
.c2 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: contain;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: fill;
}

.c3 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: scale-down;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    squared
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    horizontal
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        height={120}
        size={120}
        src="https://picsum.photos/400/200?image=1"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/400/200?image=1"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        height={120}
        size={120}
        src="https://picsum.photos/400/200?image=1"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        height={120}
        size={120}
        src="https://picsum.photos/400/200?image=1"
        width={120}
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    vertical
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        height={120}
        size={120}
        src="https://picsum.photos/200/400?image=1011"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/200/400?image=1011"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        height={120}
        size={120}
        src="https://picsum.photos/200/400?image=1011"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        height={120}
        size={120}
        src="https://picsum.photos/200/400?image=1011"
        width={120}
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    small
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        height={120}
        size={120}
        src="https://picsum.photos/56?image=111"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/56?image=111"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        height={120}
        size={120}
        src="https://picsum.photos/56?image=111"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        height={120}
        size={120}
        src="https://picsum.photos/56?image=111"
        width={120}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image image size values 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Badge sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 56px
      </div>
      <img
        alt=""
        className="c0"
        height={56}
        size={56}
        src="https://picsum.photos/512?image=66"
        width={56}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 40px
      </div>
      <img
        alt=""
        className="c0"
        height={40}
        size={40}
        src="https://picsum.photos/512?image=66"
        width={40}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 24px
      </div>
      <img
        alt=""
        className="c0"
        height={24}
        size={24}
        src="https://picsum.photos/512?image=66"
        width={24}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_SMALL - 16px
      </div>
      <img
        alt=""
        className="c0"
        height={16}
        size={16}
        src="https://picsum.photos/512?image=66"
        width={16}
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Thumbnail sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        HUGE - 240px
      </div>
      <img
        alt=""
        className="c1"
        height={240}
        size={240}
        src="https://picsum.photos/512?image=66"
        width={240}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_LARGE - 120px
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 72px
      </div>
      <img
        alt=""
        className="c1"
        height={72}
        size={72}
        src="https://picsum.photos/512?image=66"
        width={72}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 48px
      </div>
      <img
        alt=""
        className="c1"
        height={48}
        size={48}
        src="https://picsum.photos/512?image=66"
        width={48}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 40px
      </div>
      <img
        alt=""
        className="c1"
        height={40}
        size={40}
        src="https://picsum.photos/512?image=66"
        width={40}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image with box shadow 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Badge sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 56px
      </div>
      <img
        alt=""
        className="c0"
        height={56}
        size={56}
        src="https://picsum.photos/512?image=66"
        width={56}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 40px
      </div>
      <img
        alt=""
        className="c0"
        height={40}
        size={40}
        src="https://picsum.photos/512?image=66"
        width={40}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 24px
      </div>
      <img
        alt=""
        className="c0"
        height={24}
        size={24}
        src="https://picsum.photos/512?image=66"
        width={24}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_SMALL - 16px
      </div>
      <img
        alt=""
        className="c0"
        height={16}
        size={16}
        src="https://picsum.photos/512?image=66"
        width={16}
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Thumbnail sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        HUGE - 240px
      </div>
      <img
        alt=""
        className="c1"
        height={240}
        size={240}
        src="https://picsum.photos/512?image=66"
        width={240}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_LARGE - 120px
      </div>
      <img
        alt=""
        className="c1"
        height={120}
        size={120}
        src="https://picsum.photos/512?image=66"
        width={120}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 72px
      </div>
      <img
        alt=""
        className="c1"
        height={72}
        size={72}
        src="https://picsum.photos/512?image=66"
        width={72}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 48px
      </div>
      <img
        alt=""
        className="c1"
        height={48}
        size={48}
        src="https://picsum.photos/512?image=66"
        width={48}
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 40px
      </div>
      <img
        alt=""
        className="c1"
        height={40}
        size={40}
        src="https://picsum.photos/512?image=66"
        width={40}
      />
    </div>
  </div>
</div>
`;
